--- a/.README.md
+++ b/.README.md
@@ -1,4 +1,37 @@
-## MiKiAC
+# Catynetics
 
-***Mi***cro-***Ki***netic ***A***nalysis package for ***C***atalyst
+A Micro-Kinetic Analysis package for Catalytic Reactions in Python
+
+## Install
+
+1. Via pip (Not uploaded to PyPI yet):
+
+    ```shell
+    pip install catynetics
+    ```
+
+2. From source
+
+    ```shell
+    git clone https://github.com/PytLab/catynetics.git
+
+    cd catynetics
+    python setup.py install
+    ```
+
+## Test
+
+```shell
+python setup.py test
+```
+
+or 
+
+```shell
+python -m catynetics.tests.test_all
+```
+
+## Documentation
+
+For more details, see Catynetics documentation: https://catynetics-docs.readthedocs.io/en/latest/
 
