Rename project: catynetics -> scaks

--- a/.README.md
+++ b/.README.md
@@ -1,21 +1,21 @@
-# Catynetics
+# SCAKS
 
-A Micro-Kinetic Analysis package for Catalytic Reactions in Python
+SCAKS: **S**hanghai **CA**talysis **K**inetics **S**oftware
 
 ## Install
 
 1. Via pip (Not uploaded to PyPI yet):
 
     ```shell
-    pip install catynetics
+    pip install scaks
     ```
 
 2. From source
 
     ```shell
-    git clone https://github.com/PytLab/catynetics.git
+    git clone https://github.com/PytLab/scaks.git
 
-    cd catynetics
+    cd scaks
     python setup.py install
     ```
 
@@ -28,10 +28,10 @@ python setup.py test
 or 
 
 ```shell
-python -m catynetics.tests.test_all
+python -m scaks.tests.test_all
 ```
 
 ## Documentation
 
-For more details, see Catynetics documentation: https://catynetics-docs.readthedocs.io/en/latest/
+For more details, see SCAKS documentation: https://scaks-docs.readthedocs.io/en/latest/
 
