Add code structure

--- a/.README.md
+++ b/.README.md
@@ -35,3 +35,39 @@ python -m scaks.tests.test_all
 
 For more details, see SCAKS documentation: https://scaks-docs.readthedocs.io/en/latest/
 
+## Code structure
+
+```
+├── LICENSE                # License file
+├── MANIFEST.in            # Define the list of files to include in the distribution
+├── README.rst             # This file
+├── docs                   # Documentation directory
+│   ├── LICENSE
+│   ├── Makefile           # Makefile to build documentation
+│   ├── README.rst
+│   ├── build              # Built HTML documentation
+│   └── source             # Documentation source code
+├── examples               # Usage examples
+├── requirements.txt       # Python dependencies information
+├── scaks                  # SCAKS main package
+│   ├── __init__.py        # Contains base class for microkinetic model components
+│   ├── compatutil.py      # A module for compatibility of Python2.x & Python3.x
+│   ├── correctors         # Energy correctors of microkinetic model
+│   ├── database           # Constant data information
+│   ├── descriptors        # Some descriptors definition used by model
+│   ├── errors             # Custom Python exception classes
+│   ├── functions.py       # Some common utility functions
+│   ├── models             # Kinetic models
+│   ├── mpicommons.py      # A wrapped MPI for Python interfaces used in SCAKS
+│   ├── parsers            # Parers of microkinetic model
+│   ├── plotters           # Plotters for energy profile plotting based on CatPlot
+│   ├── plugins            # On-the-fly analysis and hybrid method plugins and metaclasses
+│   ├── solvers            # Solvers used by microkinetic models
+│   ├── tests              # Unit test for SCAKS interfaces
+│   └── utilities          # Some utilities functions
+├── scripts                # Some scripts for reference of users
+│   ├── mkm_plot           # Some plotting scripts
+│   └── mkm_run            # Run script
+├── setup.cfg              # Python setup configure file
+└── setup.py               # Python setup script based on setuptools
+```
